Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.7.0
Description
http://sandbox.jenkins.cloudera.com/job/impala-cdh5-trunk-core-non-partitioned-joins-and-aggs/127/
lf4j/impl/StaticLoggerBinder.class] SLF4J: See http://www.slf4j.org/codes.html#multiple_bindings for an explanation. SLF4J: Actual binding is of type [shaded.parquet.org.slf4j.helpers.NOPLoggerFactory] F0805 06:28:56.384275 13891 hdfs-parquet-scanner.cc:206] Check failed: scratch_batch_->mem_pool()->total_allocated_bytes() == 0 (8192 vs. 0) *** Check failure stack trace: *** F0805 06:28:56.408095 13886 hdfs-parquet-scanner.cc:206] Check failed: scratch_batch_->mem_pool()->total_allocated_bytes() == 0 (8192 vs. 0) *** Check failure stack trace: *** @ 0x281bffd google::LogMessage::Fail() @ 0x281bffd google::LogMessage::Fail() @ 0x281e926 google::LogMessage::SendToLog() @ 0x281e926 google::LogMessage::SendToLog() @ 0x281bb1d google::LogMessage::Flush() @ 0x281bb1d google::LogMessage::Flush() @ 0x281f3ce google::LogMessageFatal::~LogMessageFatal() @ 0x281f3ce google::LogMessageFatal::~LogMessageFatal() @ 0x16dbbd5 impala::HdfsParquetScanner::Close() @ 0x16dbbd5 impala::HdfsParquetScanner::Close() @ 0x169107d impala::HdfsScanNode::CreateAndOpenScanner() @ 0x169107d impala::HdfsScanNode::CreateAndOpenScanner() @ 0x16977da impala::HdfsScanNode::ProcessSplit() @ 0x16977da impala::HdfsScanNode::ProcessSplit() @ 0x1696c30 impala::HdfsScanNode::ScannerThread() @ 0x1696c30 impala::HdfsScanNode::ScannerThread() @ 0x16b2e5b boost::_mfi::mf0<>::operator()() @ 0x16b2e5b boost::_mfi::mf0<>::operator()() @ 0x16b1fde boost::_bi::list1<>::operator()<>() @ 0x16b1fde boost::_bi::list1<>::operator()<>() @ 0x16b0a8d boost::_bi::bind_t<>::operator()() @ 0x16b0a8d boost::_bi::bind_t<>::operator()() @ 0x16ae8d6 boost::detail::function::void_function_obj_invoker0<>::invoke() @ 0x16ae8d6 boost::detail::function::void_function_obj_invoker0<>::invoke() @ 0x135592a boost::function0<>::operator()() @ 0x135592a boost::function0<>::operator()() @ 0x16006db impala::Thread::SuperviseThread() @ 0x16070f4 boost::_bi::list4<>::operator()<>() @ 0x16006db impala::Thread::SuperviseThread() @ 0x1607037 boost::_bi::bind_t<>::operator()() @ 0x16070f4 boost::_bi::list4<>::operator()<>() @ 0x1606f92 boost::detail::thread_data<>::run() @ 0x1a4da3a thread_proxy @ 0x3f61407851 (unknown) @ 0x3f610e894d (unknown) Picked up JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=30000,server=y,suspend=n @ 0x1607037 boost::_bi::bind_t<>::operator()() @ 0x1606f92 boost::detail::thread_data<>::run() @ 0x1a4da3a thread_proxy @ 0x3f61407851 (unknown) @ 0x3f610e894d (unknown) Wrote minidump to /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/logs/ee_tests/minidumps/impalad/7a9916a7-ef7c-f733-520afb81-66713e07.dmp
Attachments
Issue Links
- is related to
-
IMPALA-3964 DCHECK hit for query involving count over nested collection
- Resolved